# ba-timeseries-gradients

./: .gitignore  Dockerfile  README.md  SECURITY.md  ba_timeseries_gradients.html  index.html  pyproject.toml  search.js  test.h5
.github/workflows/: docker_release.yaml  docs.yaml
ba_timeseries_gradients/: cli.html  exceptions.html  gradients.html  logs.html  parser.html  utils.html
src/ba_timeseries_gradients/: cli.py  exceptions.py  gradients.py  logs.py  parser.py  utils.py
src/grag_brainspace/: __main__.py  cli.py  exceptions.py  gradients.py  logs.py  utils.py
tests/integration/: test_integration_cli.py
tests/unit/: test_parser.py  test_unit_cli.py  test_unit_exceptions.py  test_unit_gradients.py  test_unit_utils.py
