[tool.poetry]
name = "ba-timeseries-gradients"
version = "0.1.0"
description = "A group runner for BrainSpace."
authors = [ "Reinder Vos de Wael <reinder.vosdewael@childmind.org>" ]
license = "LGPL-2.1"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "ba_timeseries_gradients"
  from = "src"

  [tool.poetry.dependencies]
  python = ">=3.11, <3.12"
  brainspace = "^0.1.10"
  numpy = "^1.25.0"
  h5py = "^3.9.0"
  pybids = "^0.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.24.0"

[tool.poetry.group.doc.dependencies]
pdoc = "^14.0.0"

  [tool.poetry.scripts]
  ba_timeseries_gradients = "ba_timeseries_gradients.cli:main"

  [tool.poetry.extras]
  docs = [ "pdoc" ]

[tool.pytest.ini_options]
pythonpath = [ "src" ]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = [ "src" ]
target-version = "py311"

  [tool.ruff.lint]
  select = [ "ANN", "D", "E", "F", "I" ]
  ignore = [ "ANN101", "ANN102" ]
  fixable = [ "ALL" ]
  unfixable = [ ]
  dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  skip-magic-trailing-comma = false
  line-ending = "auto"

  [tool.ruff.pydocstyle]
  convention = "google"

  [tool.ruff.per-file-ignores]
  "tests/**/*.py" = [ ]

[build-system]
requires = [ "poetry-core>=1.2.0" ]
build-backend = "poetry.core.masonry.api"
